--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     link__hover-effect--black
                     ">Contact</a>
                 </li>
-                <li class="nav__link">
+                <li class="nav__link click">
                     <a href="#" class="
                     nav__link--anchor
                     link__hover-effect
@@ -48,8 +48,31 @@
         <div class="header__content">
             <h1 class="title">Hey</h1>
             <h1 class="title"><span class="purple">I'm Alistair</span></h1>
+            <p class="header__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, ea atque. Tempore nihil, molestiae quae obcaecati eos culpa quas nulla voluptatum provident? Quo repudiandae expedita corrupti minus voluptate. Dolore, expedita.
+                <br>
+                Here's a bit more <b class="purple">about me.</b>
+            </p>
+            <div class="social__list">
+                <a href="" target="blank" class="social__link click">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="" class="social__link click">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="" target="blank" class="social__link click">
+                    <i class="fas fa-file-pdf"></i>
+                </a>
+            </div>
         </div>
        </header>
+       <button class="mail__btn click">
+        <i class="fas fa-envelope"></i>
+       </button>
+       <a href="#projects" class="scroll">
+        <div class="scroll__icon click">
+            
+        </div>
+       </a>
     </section>
 </body>
 </html>
