--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css ">
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <section id="landing-page">
         <nav>
@@ -44,34 +46,90 @@
                 </li>
             </ul>
         </nav>
-       <header class="header">
-        <div class="header__content">
-            <h1 class="title">Hey</h1>
-            <h1 class="title"><span class="purple">I'm Alistair</span></h1>
-            <p class="header__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, ea atque. Tempore nihil, molestiae quae obcaecati eos culpa quas nulla voluptatum provident? Quo repudiandae expedita corrupti minus voluptate. Dolore, expedita.
-                <br>
-                Here's a bit more <b class="purple">about me.</b>
-            </p>
-            <div class="social__list">
-                <a href="" target="blank" class="social__link click">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-                <a href="" class="social__link click">
-                    <i class="fab fa-github"></i>
-                </a>
-                <a href="" target="blank" class="social__link click">
-                    <i class="fas fa-file-pdf"></i>
-                </a>
+        <header class="header">
+            <div class="header__content">
+                <h1 class="title">Hey</h1>
+                <h1 class="title"><span class="purple">I'm Alistair</span></h1>
+                <p class="header__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, ea atque.
+                    Tempore nihil, molestiae quae obcaecati eos culpa quas nulla voluptatum provident? Quo repudiandae
+                    expedita corrupti minus voluptate. Dolore, expedita.
+                    <br>
+                    Here's a bit more <b class="purple">about me.</b>
+                </p>
+                <div class="social__list">
+                    <a href="" target="blank" class="social__link click">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="" class="social__link click">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="" target="blank" class="social__link click">
+                        <i class="fas fa-file-pdf"></i>
+                    </a>
+                </div>
             </div>
+        </header>
+        <button class="mail__btn click">
+            <i class="fas fa-envelope"></i>
+        </button>
+        <a href="#projects" class="scroll">
+            <div class="scroll__icon click"></div>
+        </a>
+        <div class="modal">
+            <div class="modal__half modal__about">
+                <h3 class="modal__title modal__title--about">Here's a bit about me</h3>
+                <h4 class="modal__sub-title modal__sub-title--about">Frontend Software Engineer</h4>
+                <p class="modal__para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                <br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <div class="modal__languages">
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+                        <span class="language__name">HTML</span>
+                    </figure>
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+                        <span class="language__name">CSS</span>
+                    </figure>
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+                        <span class="language__name">JavaScript</span>
+                    </figure>
+                </div>
+            </div>
+            <div class="modal__half modal__contact">
+                <h3 class="modal__title .modal__title--contacy">Lets have a chat</h3>
+                <h4 class="modal__sub-title modal__sub-title--contact">
+                    I'm currently open to new opportunities
+                </h4>
+                <form id="contact__form" action="">
+                    <div class="form__item">
+                        <label class="form__item--label">Name</label>
+                        <input class="input" name="user_name" type="text" required></input>
+                    </div>
+                    <div class="form__item">
+                        <label class="form__item--label">Email</label>
+                        <input class="input" name="user_email" type="email" required></input>
+                    </div>
+                    <div class="form__item">
+                        <label class="form__item--label">Message</label>
+                        <textarea class="input" name="message" type="text" required></textarea>
+                    </div>
+                    <button id="contact__submit" class="form__submit">Send it my way</button>
+                </form>
+                <div class="modal__overlay modal__overlay--loading">
+                    <i class="fas fa-spinner"></i>
+                </div>
+                <div class="modal__overlay modal__overlay--success">
+                    Thanks for the message! Looking forward to speaking to you soon.
+                </div>
+            </div>
+            <i class="fas fa-times modal__exit click"></i>
         </div>
-       </header>
-       <button class="mail__btn click">
-        <i class="fas fa-envelope"></i>
-       </button>
-       <a href="#projects" class="scroll">
-        <div class="scroll__icon click"></div>
-       </a>
     </section>
+
     <section id="projects">
         <div class="container">
             <div class="row">
@@ -91,7 +149,36 @@
                                     Html, Css, JavaScript
                                 </h4>
                                 <p class="project__description--para">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere recusandae sequi et natus laborum magni dolorem, totam facilis quae iure quis nulla repellendus illum? Porro ipsam non reprehenderit nobis nostrum!
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere recusandae sequi et
+                                    natus laborum magni dolorem, totam facilis quae iure quis nulla repellendus illum?
+                                    Porro ipsam non reprehenderit nobis nostrum!
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="#" class="project__description--link">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="#" class="project__description--link">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/blinker mockup.png" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    Car Sales Projects
+                                </h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, Css, JavaScript
+                                </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere recusandae sequi et
+                                    natus laborum magni dolorem, totam facilis quae iure quis nulla repellendus illum?
+                                    Porro ipsam non reprehenderit nobis nostrum!
                                 </p>
                                 <div class="project__description--links">
                                     <a href="#" class="project__description--link">
@@ -108,5 +195,40 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <div class="row footer__row">
+                <figure>
+                    <img class="footer__logo-img" src="./assets/logo.svg" alt="">
+                </figure>
+                <div class="footer__social--list">
+                    <a href="" class="
+            footer__social--link
+            link__hover-effect
+            link__hover-effect--white
+            ">GitHub</a>
+                    <a href="" class="
+            footer__social--link
+            link__hover-effect
+            link__hover-effect--white
+            ">LinkedIn</a>
+                    <a href="" class="
+            footer__social--link
+            link__hover-effect
+            link__hover-effect--white
+            ">Contact</a>
+                    <a href="" class="
+            footer__social--link
+            link__hover-effect
+            link__hover-effect--white
+            ">Resume</a>
+                </div>
+                <div class="footer__copyright">
+                    Copyright&copy; 2023 Alistair Chan
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
