--- a/index.html
+++ b/index.html
@@ -29,28 +29,24 @@
                     <a href="#header" class="
                     nav__link--anchor
                     link__hover-effect
-                    link__hover-effect--black
                     ">About</a>
                 </li>
                 <li class="nav__link">
                     <a href="#projects" class="
                     nav__link--anchor
                     link__hover-effect
-                    link__hover-effect--black
                     ">Projects</a>
                 </li>
                 <li class="nav__link" onclick="toggleModal()">
                     <a href="#" class="
                     nav__link--anchor
                     link__hover-effect
-                    link__hover-effect--black
                     ">Contact</a>
                 </li>
-                <li class="nav__link click">
+                <li class="nav__link click" onclick="toggleContrast()">
                     <a href="#" class="
                     nav__link--anchor
                     link__hover-effect
-                    link__hover-effect--black
                     "><i class="fas fa-adjust"></i></a>
                 </li>
             </ul>
@@ -214,22 +210,18 @@
                     <a href="" class="
             footer__social--link
             link__hover-effect
-            link__hover-effect--white
             ">GitHub</a>
                     <a href="" class="
             footer__social--link
             link__hover-effect
-            link__hover-effect--white
             ">LinkedIn</a>
                     <a href="#" class="
             footer__social--link
             link__hover-effect
-            link__hover-effect--white
             " onclick="toggleModal()">Contact</a>
                     <a href="" class="
             footer__social--link
             link__hover-effect
-            link__hover-effect--white
             ">Resume</a>
                 </div>
                 <div class="footer__copyright">
