--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section id="landing-page" onmousemove="moveBackground(event)">
         <nav>
             <figure>
-                <img id="personal-logo" src="./assets/logo.svg" alt="">
+                <img id="personal-logo" src="./assets/logowhite.png" alt="">
             </figure>
             <ul class="nav__link--list">
                 <li class="nav__link" onclick="toggleModal()">
@@ -42,7 +42,7 @@
                     link__hover-effect
                     ">Contact</a>
                 </li>
-                <li class="nav__link click" onclick="toggleContrast()">
+                <li id="adjust" class="nav__link click" onclick="toggleContrast()">
                     <a href="#" class="
                     nav__link--anchor
                     link__hover-effect
@@ -224,7 +224,7 @@
         <div class="container">
             <div class="row footer__row">
                 <figure>
-                    <h1 class="footer__logo-img"><span class="purple">AC</span></h1>
+                    <img class="footer__logo-img" src="./assets/Logodark.png"></img>
                 </figure>
                 <div class="footer__social--list">
                     <a href="" class="
