--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section id="landing-page" onmousemove="moveBackground(event)">
         <nav>
             <figure>
-                <img id="personal-logo" src="./assets/logowhite.png" alt="">
+                <img id="personal-logo" src="./assets/logo.png" alt="">
             </figure>
             <ul class="nav__link--list">
                 <li class="nav__link" onclick="toggleModal()">
@@ -58,16 +58,16 @@
                     Tempore nihil, molestiae quae obcaecati eos culpa quas nulla voluptatum provident? Quo repudiandae
                     expedita corrupti minus voluptate. Dolore, expedita.
                     <br>
-                    Here's a bit more <b class="purple">about me.</b>
+                    Here's a bit more <span class="purple"><a href="#" onclick="toggleModal()">about me.</a></span>
                 </p>
                 <div class="social__list">
-                    <a href="" target="blank" class="social__link click">
+                    <a href="https://www.linkedin.com/in/alistair-chan-62b763244/" target="blank" class="social__link click">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="" class="social__link click">
+                    <a href="https://github.com/CAlistair" target="blank" class="social__link click">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="" target="blank" class="social__link click">
+                    <a href="AlistairsCV.pdf" target="blank" class="social__link click">
                         <i class="fas fa-file-pdf"></i>
                     </a>
                 </div>
@@ -227,11 +227,11 @@
                     <img class="footer__logo-img" src="./assets/Logodark.png"></img>
                 </figure>
                 <div class="footer__social--list">
-                    <a href="" class="
+                    <a href="https://github.com/CAlistair" target="blank" class="
             footer__social--link
             link__hover-effect
             ">GitHub</a>
-                    <a href="" class="
+                    <a href="https://www.linkedin.com/in/alistair-chan-62b763244/" target="blank" class="
             footer__social--link
             link__hover-effect
             ">LinkedIn</a>
