--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
             <div class="header__content">
                 <h1 class="title">Hey</h1>
                 <h1 class="title"><span class="purple">I'm Alistair</span></h1>
-                <p class="header__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, ea atque.
-                    Tempore nihil, molestiae quae obcaecati eos culpa quas nulla voluptatum provident? Quo repudiandae
-                    expedita corrupti minus voluptate. Dolore, expedita.
+                <p class="header__para">I am a 18-year-old <span class="purple">front-end web developer</span> from the UK with a strong passion for building responsive web applications with great user experience. 
                     <br>
                     Here's a bit more <span class="purple"><a href="#" onclick="toggleModal()">about me.</a></span>
                 </p>
