Added nescessary files and links

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="header__content">
                 <h1 class="title">Hey</h1>
                 <h1 class="title"><span class="purple">I'm Alistair</span></h1>
-                <p class="header__para">I am a 18-year-old <span class="purple">front-end web developer</span> from the UK with a strong passion for building responsive web applications with great user experience. 
+                <p class="header__para">I am a 18-year-old <span class="purple">front-end web developer</span> from the UK with a strong passion for building <span class="purple">responsive</span> web applications with great <span class="purple">user experience.</span> 
                     <br>
                     Here's a bit more <span class="purple"><a href="#" onclick="toggleModal()">about me.</a></span>
                 </p>
@@ -86,9 +86,9 @@
                 <h3 class="modal__title modal__title--about">Here's a bit about me</h3>
                 <h4 class="modal__sub-title modal__sub-title--about">Frontend Software Engineer</h4>
                 <p class="modal__para">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    I am a 18-year-old <span class="purple">front-end web developer</span> from the UK with a strong passion for building <span class="purple">responsive</span> web applications with great <span class="purple">user experience.</span> 
                     <br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    I currently work on projects with real life uses and learn to solve <span class="purple"> extremely difficult</span> problems.
                 </p>
                 <div class="modal__languages">
                     <figure class="modal__language">
@@ -99,13 +99,13 @@
                     </figure>
                     <figure class="modal__language">
                         <img class="modal__language--img"
-                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                            src="/assets/CSSlogo.png"
                             alt="">
                         <span class="language__name">CSS</span>
                     </figure>
                     <figure class="modal__language">
                         <img class="modal__language--img"
-                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                            src="/assets/JavaScriptlogo.png"
                             alt="">
                         <span class="language__name">JavaScript</span>
                     </figure>
@@ -120,15 +120,15 @@
                 <form id="contact__form" onsubmit="contact(event)">
                     <div class="form__item">
                         <label class="form__item--label">Name</label>
-                        <input class="input" name="user_name" type="text"></input>
+                        <input class="input" name="user_name" type="text" required></input>
                     </div>
                     <div class="form__item">
                         <label class="form__item--label">Email</label>
-                        <input class="input" name="user_email" type="email"></input>
+                        <input class="input" name="user_email" type="email" required></input>
                     </div>
                     <div class="form__item">
                         <label class="form__item--label">Message</label>
-                        <textarea class="input" name="message" type="text"></textarea>
+                        <textarea class="input" name="message" type="text" required></textarea>
                     </div>
                     <button id="contact__submit" class="form__submit">Send it my way</button>
                 </form>
@@ -162,25 +162,23 @@
                 <ul class="project__list">
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./assets/blinker mockup.png" class="project__img" alt="">
+                            <img src="./assets/treactrecreate.png" class="project__img" alt="">
                             <div class="project__wrapper--bg"></div>
                             <div class="project__description">
                                 <h3 class="project__description--title">
-                                    Car Sales Projects
+                                    Treact Webpage Clone
                                 </h3>
                                 <h4 class="project__description--sub-title">
-                                    Html, Css, JavaScript
+                                    Html, Css
                                 </h4>
                                 <p class="project__description--para">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere recusandae sequi et
-                                    natus laborum magni dolorem, totam facilis quae iure quis nulla repellendus illum?
-                                    Porro ipsam non reprehenderit nobis nostrum!
+                                    In this project I cloned a template of a webpage with limited resources. Whilst doing this project I learnt how to use inspect element to identify the layouts and designs used. I also successfully got the website close to identical with the knowledge and skills I had at the time. 
                                 </p>
                                 <div class="project__description--links">
-                                    <a href="#" class="project__description--link">
+                                    <a href="https://github.com/CAlistair/TreactRecreate" target="blank" class="project__description--link">
                                         <i class="fab fa-github"></i>
                                     </a>
-                                    <a href="#" class="project__description--link">
+                                    <a href="https://calistair.github.io/TreactRecreate/" target="blank" class="project__description--link">
                                         <i class="fas fa-link"></i>
                                     </a>
                                 </div>
@@ -189,25 +187,23 @@
                     </li>
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./assets/blinker mockup.png" class="project__img" alt="">
+                            <img src="./assets/elibrary.png" class="project__img" alt="">
                             <div class="project__wrapper--bg"></div>
                             <div class="project__description">
                                 <h3 class="project__description--title">
-                                    Car Sales Projects
+                                    E-library/ E-commerce
                                 </h3>
                                 <h4 class="project__description--sub-title">
                                     Html, Css, JavaScript
                                 </h4>
                                 <p class="project__description--para">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere recusandae sequi et
-                                    natus laborum magni dolorem, totam facilis quae iure quis nulla repellendus illum?
-                                    Porro ipsam non reprehenderit nobis nostrum!
+                                    In this project I started off using HTML and CSS to build the base of the website and functionability including the responsiveness. To add on to the project Javascript was added for a filter method within the books available.
                                 </p>
                                 <div class="project__description--links">
-                                    <a href="#" class="project__description--link">
+                                    <a href="https://github.com/CAlistair/Library" target="blank" class="project__description--link">
                                         <i class="fab fa-github"></i>
                                     </a>
-                                    <a href="#" class="project__description--link">
+                                    <a href="https://calistair.github.io/Library/" target="blank" class="project__description--link">
                                         <i class="fas fa-link"></i>
                                     </a>
                                 </div>
@@ -237,7 +233,7 @@
             footer__social--link
             link__hover-effect
             " onclick="toggleModal()">Contact</a>
-                    <a href="" class="
+                    <a href="AlistairsCV.pdf" target="blank" class="
             footer__social--link
             link__hover-effect
             ">Resume</a>
