Fixed some issues

--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
                     </figure>
                     <figure class="modal__language">
                         <img class="modal__language--img"
-                            src="/assets/CSSlogo.png"
+                            src="assets/CSSlogo.png"
                             alt="">
                         <span class="language__name">CSS</span>
                     </figure>
                     <figure class="modal__language">
                         <img class="modal__language--img"
-                            src="/assets/JavaScriptlogo.png"
+                            src="assets/JavaScriptlogo.png"
                             alt="">
                         <span class="language__name">JavaScript</span>
                     </figure>
