Added new section to projects

--- a/index.html
+++ b/index.html
@@ -210,6 +210,35 @@
                             </div>
                         </div>
                     </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/MovieAPI.png" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    Movie API Fetcher
+                                </h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, Css, JavaScript
+                                </h4>
+                                <p class="project__description--para">
+                                    In this project I used omdbapi, which is a movie API with over 1000 movies.
+                                     I used JavaScript to help locate the data when a keyword or title is entered in the search bar.
+                                      The project was difficult to do at first but after some time I got the hang of it.
+                                       When title is entered initally a loading state is also present, and if there was no movies found an error message would be present to inform users.
+                                        Html and Css here is self explanatory simple but effective and also responsive to different devices.
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://github.com/CAlistair/MovieAPIfetcher" target="blank" class="project__description--link">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="https://calistair.github.io/MovieAPIfetcher/" target="blank" class="project__description--link">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
