--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
                                      I used JavaScript to help locate the data when a keyword or title is entered in the search bar.
                                       The project was difficult to do at first but after some time I got the hang of it.
                                        When title is entered initally a loading state is also present, and if there was no movies found an error message would be present to inform users.
+                                        Filter featurer also implemented to show recent and oldest movies.
                                         Html and Css here is self explanatory simple but effective and also responsive to different devices.
                                 </p>
                                 <div class="project__description--links">
