Added a new project

--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
                             alt="">
                         <span class="language__name">JavaScript</span>
                     </figure>
+                    <figure class="modal__language">
+                        <img class="modal__language--img"
+                            src="assets/React-icon.svg.png"
+                            alt="">
+                        <span class="language__name">React</span>
+                    </figure>
                 </div>
             </div>
             <div class="modal__half modal__contact">
@@ -187,31 +193,6 @@
                     </li>
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./assets/elibrary.png" class="project__img" alt="">
-                            <div class="project__wrapper--bg"></div>
-                            <div class="project__description">
-                                <h3 class="project__description--title">
-                                    E-library/ E-commerce
-                                </h3>
-                                <h4 class="project__description--sub-title">
-                                    Html, Css, JavaScript
-                                </h4>
-                                <p class="project__description--para">
-                                    In this project I started off using HTML and CSS to build the base of the website and functionability including the responsiveness. To add on to the project Javascript was added for a filter method within the books available.
-                                </p>
-                                <div class="project__description--links">
-                                    <a href="https://github.com/CAlistair/Library" target="blank" class="project__description--link">
-                                        <i class="fab fa-github"></i>
-                                    </a>
-                                    <a href="https://calistair.github.io/Library/" target="blank" class="project__description--link">
-                                        <i class="fas fa-link"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="project">
-                        <div class="project__wrapper">
                             <img src="./assets/MovieAPI.png" class="project__img" alt="">
                             <div class="project__wrapper--bg"></div>
                             <div class="project__description">
@@ -234,6 +215,34 @@
                                         <i class="fab fa-github"></i>
                                     </a>
                                     <a href="https://calistair.github.io/MovieAPIfetcher/" target="blank" class="project__description--link">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/View.png" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    E-commerce for Monitor
+                                </h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, Css, JavaScript, React
+                                </h4>
+                                <p class="project__description--para">
+                                    View is my first React project. In this project I got to use React to make reusable code and components.
+                                     I learnt how to use React-Router to redirect user without refresh and this gave me the ability to make 
+                                     a cart. Within the cart products can be added on to it and a total can be calculated through it. This project 
+                                     tested my basic understanding of React whilst also tested my creativity with designing web pages.
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://github.com/CAlistair/Ecom-Headache" target="blank" class="project__description--link">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="https://firstecomapp-40fae2030c00.herokuapp.com/" target="blank" class="project__description--link">
                                         <i class="fas fa-link"></i>
                                     </a>
                                 </div>
