--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                                     <a href="https://github.com/CAlistair/Ecom-Headache" target="blank" class="project__description--link">
                                         <i class="fab fa-github"></i>
                                     </a>
-                                    <a href="https://firstecomapp-40fae2030c00.herokuapp.com/" target="blank" class="project__description--link">
+                                    <a href="https://ecom-headache.vercel.app/" target="blank" class="project__description--link">
                                         <i class="fas fa-link"></i>
                                     </a>
                                 </div>
