new project added

--- a/index.html
+++ b/index.html
@@ -249,6 +249,33 @@
                             </div>
                         </div>
                     </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/Teslaclone.png" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    Tesla Clone
+                                </h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, Css, JavaScript, React, Redux and Firebase
+                                </h4>
+                                <p class="project__description--para">
+                                    A clone of the Tesla website. Utilising React to make some components reusable and use of Firebase 
+                                    to have a user login and signup. Once logged in or signed up user is redirected to account page, also 
+                                    consist of persistence so when page is refreshed account would automatically login.
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://github.com/CAlistair?tab=repositories" target="blank" class="project__description--link">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="https://clone-tesla-bice.vercel.app/" target="blank" class="project__description--link">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
