--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a href="https://github.com/CAlistair" target="blank" class="social__link click">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="AlistairsCV.pdf" target="blank" class="social__link click">
+                    <a href="AlistairCV.pdf" target="blank" class="social__link click">
                         <i class="fas fa-file-pdf"></i>
                     </a>
                 </div>
@@ -114,6 +114,18 @@
                             src="assets/React-icon.svg.png"
                             alt="">
                         <span class="language__name">React</span>
+                    </figure>
+                    <figure class="modal__language">
+                        <img class="modal__language--img"
+                            src="assets/Firebase.png"
+                            alt="">
+                        <span class="language__name">Firebase</span>
+                    </figure>
+                    <figure class="modal__language">
+                        <img class="modal__language--img"
+                            src="assets/Redux.png"
+                            alt="">
+                        <span class="language__name">Redux</span>
                     </figure>
                 </div>
             </div>
