new project added

--- a/index.html
+++ b/index.html
@@ -288,6 +288,42 @@
                             </div>
                         </div>
                     </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/AnimeLibrary.png" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    AnimeLibrary
+                                </h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, Css, JavaScript, React, Redux and Firebase
+                                </h4>
+                                <p class="project__description--para">
+                                    An original desgin and website that utilises an Api to fetch data about anime.
+                                     This website has the ability to search and filter animes, it also has an additional function 
+                                     of finding a random anime and can be refreshed. There is login and sign up function and allow 
+                                     users to make their own account, below will be a test account for users to try. The main goal 
+                                     of the website was to make an anime list and so the feature to add and remove anime to your list is 
+                                     possible and is saved as long as website is not refreshed.
+                                     <br>
+                                     Test Account:
+                                     <br>
+                                     Email - test@gmail.com
+                                     <br>
+                                     Password - password123
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://github.com/CAlistair/animelibrary" target="blank" class="project__description--link">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="https://animelibrary-cyan.vercel.app/" target="blank" class="project__description--link">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
