Added new project

--- a/index.html
+++ b/index.html
@@ -324,6 +324,45 @@
                             </div>
                         </div>
                     </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/Netflix.png" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    Netflix
+                                </h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, Css, JavaScript, React, Redux, Firebase and Stripe
+                                </h4>
+                                <p class="project__description--para">
+                                    A clone website of Netflix with movies and shows fetched from an Api.
+                                     There is a login and sign up function a test account is provided below.
+                                      With this project I also intergrated Stripe payment method for the different plans.
+                                       Test card number will also be provided below and the rest of the details can be made up.
+                                        When opened on web a warning may occur due to the Stripe payment method but there is NO DANGERS to the site.
+                                     <br>
+                                     Test Account:
+                                     <br>
+                                     Email - abc@gmail.com
+                                     <br>
+                                     Password - password123
+                                     <br>
+                                     Card Number:
+                                     <br>
+                                     4242424242424242
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://github.com/CAlistair/Netflix-clone" target="blank" class="project__description--link">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="https://netflix-clone-lake-six.vercel.app/" target="blank" class="project__description--link">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
