--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
         <div class="modal">
             <div class="modal__half modal__about">
                 <h3 class="modal__title modal__title--about">Here's a bit about me</h3>
-                <h4 class="modal__sub-title modal__sub-title--about">Frontend Software Engineer</h4>
+                <h4 class="modal__sub-title modal__sub-title--about">Frontend Engineer</h4>
                 <p class="modal__para">
                     I am a 18-year-old <span class="purple">front-end web developer</span> from the UK with a strong passion for building <span class="purple">responsive</span> web applications with great <span class="purple">user experience.</span> 
                     <br>
-                    I currently work on projects with real life uses and learn to solve <span class="purple"> extremely difficult</span> problems.
+                    I currently work on projects with real life uses and learn to solve <span class="purple"> extremely difficult</span> problems. Currently learning Python!
                 </p>
                 <div class="modal__languages">
                     <figure class="modal__language">
