--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a href="https://github.com/CAlistair" target="blank" class="social__link click">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="AlistairCV.pdf" target="blank" class="social__link click">
+                    <a href="AlistairsCV.pdf" target="blank" class="social__link click">
                         <i class="fas fa-file-pdf"></i>
                     </a>
                 </div>
